--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,34 +17,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_arena():\n",
+    "def plot_arena(ax):\n",
+    "    # arena: arena.world \n",
     "    ax.add_patch(patches.Rectangle((-5,-5), 1, 10, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((4,-5), 1, 10, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-5,-5), 10, 1, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-5,4), 10, 1, edgecolor='grey', facecolor='none'))\n",
     "\n",
-    "def plot_arena_large():\n",
+    "    \n",
+    "def plot_arena_large(ax):\n",
+    "    # arena: arena_large.world\n",
     "    ax.add_patch(patches.Rectangle((-10,-10), 1, 20, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((9,-10), 1, 20, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-10,-10), 20, 1, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-10,9), 20, 1, edgecolor='grey', facecolor='none'))\n",
     "\n",
-    "def plot_two_rooms():   \n",
+    "    \n",
+    "def plot_two_rooms(ax): \n",
+    "    # arena: two_rooms.world\n",
     "    ax.add_patch(patches.Rectangle((-10,-8), 1, 16, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((9,-8), 1, 16, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-2,2), 1, 6, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-2,-8), 1, 6, edgecolor='grey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-10,7), 20, 1, edgecolor='grey', facecolor='none'))\n",
-    "    ax.add_patch(patches.Rectangle((-10,-8), 20, 1, edgecolor='grey', facecolor='none'))\n"
+    "    ax.add_patch(patches.Rectangle((-10,-8), 20, 1, edgecolor='grey', facecolor='none'))\n",
+    "\n",
+    "    \n",
+    "def calculate_yaw(orientation):\n",
+    "    # calculate yaw angle (around x-axis)\n",
+    "    \n",
+    "    q_x = float(orientation[0][2:])\n",
+    "    q_y = float(orientation[1][2:])\n",
+    "    q_z = float(orientation[2][2:])\n",
+    "    q_w = float(orientation[3][2:])\n",
+    "\n",
+    "    siny_cosp = 2 * (q_w * q_z + q_x * q_y)\n",
+    "    cosy_cosp = 1 - 2 * (q_y * q_y + q_z * q_z)\n",
+    "\n",
+    "    return np.arctan2(siny_cosp, cosy_cosp)\n",
+    "    \n",
+    "\n",
+    "def create_plot(objects_x, objects_y, robots_x, robots_y, lidar_x, lidar_y, arena, r_x, r_y, robot):\n",
+    "    # create plot with robots, obstacles and lidar data \n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    plt.title(str(robot))\n",
+    "        \n",
+    "    if arena == 'arena':\n",
+    "        plot_arena(ax)\n",
+    "    elif arena == 'arena-large':\n",
+    "        plot_arena_large(ax)\n",
+    "    elif arena == \"two-rooms\":\n",
+    "        plot_two_rooms(ax) \n",
+    "\n",
+    "\n",
+    "    plt.scatter(x=objects_x, y=objects_y, facecolors='none', edgecolors='blue') # objects except ground plane \n",
+    "    plt.scatter(x=robots_x, y=robots_y, facecolors='none', edgecolors='orange') # robots \n",
+    "    plt.scatter(r_x, r_y, facecolors='none', edgecolors='green') # robots \n",
+    "    plt.scatter(lidar_x, lidar_y, s=0.4, color='red') # lidar  \n",
+    "\n",
+    "    \n",
+    "def transform_lidar(df, r_x, r_y, angle):  \n",
+    "    # transform lidar data from angle - distance to point \n",
+    "    \n",
+    "    # get lidar data \n",
+    "    ld = [float(el) for el in df['scan'][idx].split('ranges=[')[1].split('],')[0].split(',')]\n",
+    "        \n",
+    "    # transform lidar data to x, y positions \n",
+    "        \n",
+    "    lidar_x = []\n",
+    "    lidar_y = []\n",
+    "\n",
+    "    for i in range(0, 360): \n",
+    "        if not math.isinf(ld[i]):\n",
+    "            lidar_x.append(ld[i] * math.cos(angle + np.deg2rad(i)) + r_x)\n",
+    "            lidar_y.append(ld[i] * math.sin(angle + np.deg2rad(i)) + r_y)\n",
+    "        else: \n",
+    "            lidar_x.append(float('inf'))\n",
+    "            lidar_y.append(float('inf'))\n",
+    "                \n",
+    "    return lidar_x, lidar_y \n",
+    "\n",
+    "    \n",
+    "def get_positions(df):        \n",
+    "    # get object and robot positions from data frame \n",
+    "    \n",
+    "    objects_x = [] \n",
+    "    objects_y = [] \n",
+    "    robots_x = [] \n",
+    "    robots_y = [] \n",
+    "    r_x = 0 \n",
+    "    r_y = 0 \n",
+    "    angle = 0 \n",
+    "    \n",
+    "    # get object names  \n",
+    "    names = [el[1:-1] for el in df['poses'][idx].split('[')[1].split(']')[0].split(', ')] \n",
+    "\n",
+    "    string = df['poses'][idx]\n",
+    "\n",
+    "    for i in range(0, len(names)):\n",
+    "        # get position \n",
+    "        start = string.find('Point')\n",
+    "        stop = string[start:].find(')')\n",
+    "        pose = string[start+6:start+stop].split(', ')\n",
+    "        \n",
+    "        # get yaw angle (rotation around x-axis )\n",
+    "        string = string[start+6:]\n",
+    "        start = string.find('Quaternion')\n",
+    "        stop = string[start:].find(')')\n",
+    "        orientation = string[start+11:start+stop].split(', ')\n",
+    "        \n",
+    "        if names[i][:5] == \"robot\":\n",
+    "            robots_x.append(float(pose[0][2:]))\n",
+    "            robots_y.append(float(pose[1][2:]))\n",
+    "            \n",
+    "            if names[i] == df['robot'][idx]:\n",
+    "                r_x = robots_x[-1]\n",
+    "                r_y = robots_y[-1]\n",
+    "                angle = calculate_yaw(orientation)\n",
+    "                \n",
+    "        elif names[i] != \"ground_plane\": \n",
+    "            objects_x.append(float(pose[0][2:]))\n",
+    "            objects_y.append(float(pose[1][2:]))\n",
+    "    \n",
+    "    return objects_x, objects_y, robots_x, robots_y, r_x, r_y, angle "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -111,103 +216,26 @@
     }
    ],
    "source": [
+    "#TODO: index for line in data frame \n",
+    "idx = 60    \n",
+    "\n",
+    "# get folders with rosbags / lidar data  \n",
     "subfolders = [f.name for f in os.scandir('./') if f.is_dir() and f.name[:1] != '.']\n",
     "\n",
     "for subfolder in subfolders: \n",
     "    files = glob.glob(subfolder+'/*.csv')\n",
     "    arena = subfolder.split('_')[0]\n",
     "    \n",
-    "    for f in files: \n",
+    "    for f in files:  \n",
+    "        \n",
     "        df = pd.read_csv(f)\n",
-    "    \n",
-    "        #TODO: index for line in data frame \n",
-    "        idx = 60\n",
     "\n",
-    "        # get object names  \n",
-    "        names = [el[1:-1] for el in df['poses'][idx].split('[')[1].split(']')[0].split(', ')]\n",
-    "\n",
-    "        # get object positions \n",
-    "        positions_x = [] \n",
-    "        positions_y = [] \n",
-    "        orientations = [] \n",
-    "\n",
-    "        string = df['poses'][idx]\n",
-    "\n",
-    "        for i in range(0, len(names)):\n",
-    "            # get position \n",
-    "            start = string.find('Point')\n",
-    "            stop = string[start:].find(')')\n",
-    "            pose = string[start+6:start+stop].split(', ')\n",
-    "            positions_x.append(float(pose[0][2:]))\n",
-    "            positions_y.append(float(pose[1][2:]))\n",
-    "\n",
-    "            # get yaw angle (rotation around x-axis )\n",
-    "            string = string[start+6:]\n",
-    "            start = string.find('Quaternion')\n",
-    "            stop = string[start:].find(')')\n",
-    "            orientation = string[start+11:start+stop].split(', ')\n",
-    "\n",
-    "            q_x = float(orientation[0][2:])\n",
-    "            q_y = float(orientation[1][2:])\n",
-    "            q_z = float(orientation[2][2:])\n",
-    "            q_w = float(orientation[3][2:])\n",
-    "\n",
-    "            siny_cosp = 2 * (q_w * q_z + q_x * q_y)\n",
-    "            cosy_cosp = 1 - 2 * (q_y * q_y + q_z * q_z)\n",
-    "            orientations.append(np.arctan2(siny_cosp, cosy_cosp))\n",
-    "    \n",
-    "        # get lidar data \n",
-    "        ld = [float(el) for el in df['scan'][idx].split('ranges=[')[1].split('],')[0].split(',')]\n",
+    "        objects_x, objects_y, robots_x, robots_y, r_x, r_y, angle = get_positions(df) \n",
     "        \n",
-    "        # get object and robot positions from data frame \n",
-    "        objects_x = [] \n",
-    "        objects_y = [] \n",
-    "        robots_x = [] \n",
-    "        robots_y = [] \n",
-    "        lidar_x = []\n",
-    "        lidar_y = []\n",
+    "        lidar_x, lidar_y = transform_lidar(df, r_x, r_y, angle)\n",
     "        \n",
-    "        # position of current robot (lidar data)\n",
-    "        r_x = 0 \n",
-    "        r_y = 0 \n",
-    "        \n",
-    "        for i in range(0, len(names)):\n",
-    "\n",
-    "            if names[i][:5] == \"robot\":\n",
-    "                robots_x.append(positions_x[i])\n",
-    "                robots_y.append(positions_y[i])   \n",
-    "\n",
-    "                if names[i] == df['robot'][idx]:\n",
-    "                    r_x = positions_x[i]\n",
-    "                    r_y = positions_y[i]\n",
-    "                    angle = orientations[i]\n",
-    "\n",
-    "            elif names[i] != \"ground_plane\": \n",
-    "                objects_x.append(positions_x[i])\n",
-    "                objects_y.append(positions_y[i])\n",
-    "\n",
-    "         # transform lidar data to x, y positions \n",
-    "\n",
-    "        for i in range(0, 360): \n",
-    "            if not math.isinf(ld[i]):\n",
-    "                lidar_x.append(ld[i] * math.cos(angle + np.deg2rad(i)) + r_x)\n",
-    "                lidar_y.append(ld[i] * math.sin(angle + np.deg2rad(i)) + r_y)\n",
-    "        \n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        plt.title(str(df['robot'][idx]))\n",
-    "        \n",
-    "        if arena == 'arena':\n",
-    "            plot_arena()\n",
-    "        elif arena == 'arena-large':\n",
-    "            plot_arena_large()\n",
-    "        elif arena == \"two-rooms\":\n",
-    "            plot_two_rooms() \n",
-    "\n",
-    "\n",
-    "        plt.scatter(x=objects_x, y=objects_y, facecolors='none', edgecolors='blue') # objects except ground plane \n",
-    "        plt.scatter(x=robots_x, y=robots_y, facecolors='none', edgecolors='orange') # robots \n",
-    "        plt.scatter(r_x, r_y, facecolors='none', edgecolors='green') # robots \n",
-    "        plt.scatter(lidar_x, lidar_y, s=0.4, color='red') # lidar           "
+    "        create_plot(objects_x, objects_y, robots_x, robots_y, lidar_x, lidar_y, arena, r_x, r_y, df['robot'][idx])\n",
+    "        \n"
    ]
   },
   {
