--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -91,8 +91,8 @@
     "    # Turtle head etc. \n",
     "    \n",
     "\n",
-    "def plot_arena_blocks_pillars(ax):\n",
-    "    # arena: arena_blocks_pillars.world \n",
+    "def plot_arena_corners_pillars(ax):\n",
+    "    # arena: arena_corners_pillars.world \n",
     "    ax.add_patch(patches.Rectangle((-5,-7), 10, 1, edgecolor='lightgrey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-5,-7), 1, 14, edgecolor='lightgrey', facecolor='none'))\n",
     "    ax.add_patch(patches.Rectangle((-5,6), 10, 1, edgecolor='lightgrey', facecolor='none'))\n",
