--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -347,6 +347,18 @@
     "    elif arena == \"arena-walls\":\n",
     "        boundaries = [(0, -7), (0, 7), (-7, 0), (7, 0)]\n",
     "    \n",
+    "    objects = []\n",
+    "    if arena == 'arena':\n",
+    "        pass\n",
+    "    elif arena == 'arena-large':\n",
+    "        pass\n",
+    "    elif arena == \"two-rooms\":\n",
+    "        boundaries = [(0, -7), (0, 7), (-9, 0), (9, 0)]\n",
+    "    elif arena == \"arena-corners\":\n",
+    "        pass # \n",
+    "    elif arena == \"arena-walls\":\n",
+    "        boundaries = [(0, -7), (0, 7), (-7, 0), (7, 0)]\n",
+    "    \n",
     "    for bn in boundaries:\n",
     "        bx, by = bn\n",
     "        if bx == 0:\n",
@@ -512,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
