add functionality to match rectangles and circle objects in arenas

--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -234,7 +234,7 @@
     "        plot_arena_blocks_pillars(ax)\n",
     "    elif arena == \"turtle\":\n",
     "        plot_turtle(ax)\n",
-    "    elif arena == \"arena-pillars\":\n",
+    "    elif arena == \"arena-boxes-pillars\":\n",
     "        plot_arena_boxes_pillars(ax)        \n",
     "\n",
     "    ax.scatter(*objects.T, facecolors='blue', marker='+') # objects except ground plane \n",
@@ -373,20 +373,48 @@
     "    elif arena == \"arena-pillars\":\n",
     "        boundaries = [(0, -9), (0, 9), (-9, 0), (9, 0)]\n",
     "    elif arena == \"arena-poles\":\n",
-    "        boundaries = [(0, -6), (0, 6), (-6, 0), (6, 0)]   \n",
-    "    #ToDo: other arenas and other objects \n",
+    "        boundaries = [(0, -6), (0, 6), (-6, 0), (6, 0)]   #ToDo: other arenas and other objects \n",
+    "    elif arena == \"arena-walls-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-pillars-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-blocks-pillars\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"turtle\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-boxes-pillars\":\n",
+    "        pass # need to define objects\n",
     "    \n",
-    "    objects = []\n",
+    "    circle_objects = []\n",
+    "    rectangle_objects = []\n",
     "    if arena == 'arena':\n",
     "        pass\n",
     "    elif arena == 'arena-large':\n",
-    "        pass\n",
+    "        pass    \n",
     "    elif arena == \"two-rooms\":\n",
-    "        boundaries = [(0, -7), (0, 7), (-9, 0), (9, 0)]\n",
+    "        rectangle_objects = [(-2, 2, 1, 0, 0, 6), (-2, -8, 1, 0, 0, 6)]\n",
     "    elif arena == \"arena-corners\":\n",
-    "        pass # \n",
+    "        pass # need to define objects\n",
     "    elif arena == \"arena-walls\":\n",
-    "        boundaries = [(0, -7), (0, 7), (-7, 0), (7, 0)]\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-pillars\":\n",
+    "        circle_objects = [(-4.5, 4.5, 1), (-4.5, -4.5, 1), (4.5, -4.5, 1), (4.5, 4.5, 1)]\n",
+    "    elif arena == \"arena-poles\":\n",
+    "        pass # need to define objects \n",
+    "    elif arena == \"arena-walls-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-pillars-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-poles\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-blocks-pillars\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"turtle\":\n",
+    "        pass # need to define objects\n",
+    "    elif arena == \"arena-boxes-pillars\":\n",
+    "        pass # need to define objects\n",
     "    \n",
     "    for bn in boundaries:\n",
     "        bx, by = bn\n",
@@ -395,8 +423,32 @@
     "        if by == 0:\n",
     "            match_bn = (lidar[:, 0] - bx) ** 2 < 0.15 ** 2\n",
     "        match[match_bn] = 1\n",
-    "        chk = match.mean() < 0.99\n",
-    "        match = match.astype(bool)\n",
+    "    \n",
+    "    for rec in rectangle_objects:\n",
+    "        x_st, y_st, x_1, y_1, x_2, y_2 = rec\n",
+    "        for line in [(x_st, y_st, x_1, y_1),\n",
+    "                    (x_st, y_st, x_2, y_2),\n",
+    "                    (x_st + x_2, y_st + y_2, x_1, y_1),\n",
+    "                    (x_st + x_1, y_st + y_1, x_2, y_2)]:\n",
+    "            start_pt = np.ndarray(line[:2])\n",
+    "            lidar_sh = lidar - start_pt\n",
+    "            match_rec1 = ((lidar_sh[:, 0] / lidar_sh[:, 1]) / (line[3] / line[4]) - 1) ** 2 < 0.15 ** 2 \n",
+    "            match_rec2 = (lidar_sh[:, 0] ** 2 - line[3] ** 2) < 0\n",
+    "            match_rec3 = lidar_sh[:, 0] * line[3] > 0\n",
+    "            match_rec = match_rec1.astype(int) * match_rec2.astype(int) * match_rec3.astype(int)\n",
+    "            match[match_rec.astype(bool)] = 1\n",
+    "            \n",
+    "    for x, y, r in circle_objects:\n",
+    "        match_circ1 = ((lidar - np.ndarray([[x, y]])) ** 2).sum(-1) < (r + 0.15) ** 2\n",
+    "        match_circ2 = ((lidar - np.ndarray([[x, y]])) ** 2).sum(-1) > (r - 0.15) ** 2\n",
+    "        match_circ = match_circ1.astype(int) * match_circ2.astype(int)\n",
+    "        match[match_circ.astype(bool)] = 1\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    chk = match.mean() < 0.99\n",
+    "    match = match.astype(bool)\n",
+    "        \n",
     "    return chk, lidar[~match], lidar[match]\n",
     "    \n",
     "    "
