Fix np ndarray creation error

--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -430,7 +430,7 @@
     "                    (x_st, y_st, x_2, y_2),\n",
     "                    (x_st + x_2, y_st + y_2, x_1, y_1),\n",
     "                    (x_st + x_1, y_st + y_1, x_2, y_2)]:\n",
-    "            start_pt = np.ndarray(line[:2])\n",
+    "            start_pt = np.ndarray(shape=(1,2), buffer=np.array(line[:2], dtype=float), dtype=float)\n",
     "            lidar_sh = lidar - start_pt\n",
     "            match_rec1 = ((lidar_sh[:, 0] / lidar_sh[:, 1]) / (line[3] / line[4]) - 1) ** 2 < 0.15 ** 2 \n",
     "            match_rec2 = (lidar_sh[:, 0] ** 2 - line[3] ** 2) < 0\n",
@@ -439,8 +439,8 @@
     "            match[match_rec.astype(bool)] = 1\n",
     "            \n",
     "    for x, y, r in circle_objects:\n",
-    "        match_circ1 = ((lidar - np.ndarray([[x, y]])) ** 2).sum(-1) < (r + 0.15) ** 2\n",
-    "        match_circ2 = ((lidar - np.ndarray([[x, y]])) ** 2).sum(-1) > (r - 0.15) ** 2\n",
+    "        match_circ1 = ((lidar - np.ndarray(shape=(1,2), buffer=np.array([x, y], dtype=float), dtype=float)) ** 2).sum(-1) < (r + 0.15) ** 2\n",
+    "        match_circ2 = ((lidar - np.ndarray(shape=(1,2), buffer=np.array([x, y], dtype=float), dtype=float)) ** 2).sum(-1) > (r - 0.15) ** 2\n",
     "        match_circ = match_circ1.astype(int) * match_circ2.astype(int)\n",
     "        match[match_circ.astype(bool)] = 1\n",
     "        \n",
