change checking approach to avoid numerical issues

--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -432,9 +432,19 @@
     "                    (x_st + x_1, y_st + y_1, x_2, y_2)]:\n",
     "            start_pt = np.ndarray(shape=(1,2), buffer=np.array(line[:2], dtype=float), dtype=float)\n",
     "            lidar_sh = lidar - start_pt\n",
-    "            match_rec1 = ((lidar_sh[:, 0] / lidar_sh[:, 1]) / (line[3] / line[4]) - 1) ** 2 < 0.15 ** 2 \n",
-    "            match_rec2 = (lidar_sh[:, 0] ** 2 - line[3] ** 2) < 0\n",
-    "            match_rec3 = lidar_sh[:, 0] * line[3] > 0\n",
+    "            if (abs(line[2]) > abs(line[3])):\n",
+    "                vec = (line[2], line[3])\n",
+    "                x_lid = lidar_sh[:, 0]\n",
+    "                y_lid = lidar_sh[:, 1]\n",
+    "            else:\n",
+    "                vec = (line[3], line[2])\n",
+    "                x_lid = lidar_sh[:, 1]\n",
+    "                y_lid = lidar_sh[:, 0]\n",
+    "            \n",
+    "            slope = vec[1] / vec[0]\n",
+    "            match_rec1 = (x_lid * slope - y_lid) ** 2 < 0.15 ** 2 \n",
+    "            match_rec2 = (x_lid ** 2 - vec[0] ** 2) < 0\n",
+    "            match_rec3 = x_lid * vec[0] > 0\n",
     "            match_rec = match_rec1.astype(int) * match_rec2.astype(int) * match_rec3.astype(int)\n",
     "            match[match_rec.astype(bool)] = 1\n",
     "            \n",
@@ -876,7 +886,7 @@
     "        \n",
     "            # get robot and object positions \n",
     "            objects, robots, r, angle = get_positions(df, idx) \n",
-    "            s\n",
+    "            \n",
     "            # transform lidar scans to points \n",
     "            lidar, ld = transform_lidar(df, r, angle, idx, shift=0)\n",
     "\n",
@@ -888,7 +898,7 @@
     "            lidar = detect_kin(robots, lidar)\n",
     "            \n",
     "            # create plot \n",
-    "            create_plot(objects, robots, lidar, arena, r, df['robot'][idx], axes[rob], rot_check)\n",
+    "            create_plot(objects, robots, lidar[:2], arena, r, df['robot'][idx], axes[rob], rot_check)\n",
     "            \n",
     "        plt.savefig(\"./figures/gt_figs/\" + re.sub('\\\\\\\\.*$', '', files[0]) + \"_%d.png\" % (idx,))\n",
     "        plt.close()"
