add automatic correction attempt

--- a/evaluation_lidar_data.ipynb
+++ b/evaluation_lidar_data.ipynb
@@ -304,11 +304,12 @@
     "    return np.arctan2(siny_cosp, cosy_cosp)\n",
     "\n",
     "    \n",
-    "def transform_lidar(df, r, angle, idx, shift=0):  \n",
+    "def transform_lidar(df, r, angle, idx, shift=0, ld=None):  \n",
     "    # transform lidar data from angle - distance to point \n",
     "    \n",
     "    # get lidar data \n",
-    "    ld = [float(el) for el in df['scan'][idx].split('ranges=[')[1].split('],')[0].split(',')]\n",
+    "    if not ld:\n",
+    "        ld = [float(el) for el in df['scan'][idx].split('ranges=[')[1].split('],')[0].split(',')]\n",
     "        \n",
     "    # transform lidar data to x, y positions \n",
     "        \n",
@@ -458,11 +459,11 @@
     "        match[match_circ.astype(bool)] = 1\n",
     "        \n",
     "        \n",
-    "    \n",
-    "    chk = match.mean() < 0.99\n",
+    "    prcntg = match.mean()\n",
+    "    chk = prcntg < 0.999\n",
     "    match = match.astype(bool)\n",
     "        \n",
-    "    return chk, lidar[~match], lidar[match]\n",
+    "    return chk, lidar[~match], lidar[match], prcntg\n",
     "    \n",
     "    "
    ]
@@ -1771,6 +1772,7 @@
     "\n",
     "    for folder in folders: \n",
     "        for subfolder in [directories_dic[folder][1]]:\n",
+    "            shift=[0,0,0,0,0,0,0,0,0]\n",
     "            os.chdir('./raw_data/' + folder + '/' + subfolder)\n",
     "            \n",
     "            files = os.listdir('.')\n",
@@ -1791,7 +1793,22 @@
     "                lidar, ld = transform_lidar(df, r, angle, idx, shift[rob])\n",
     "\n",
     "                # check for false rotation calculation\n",
-    "                rot_check, lm, lnm = detect_false_rotation(objects, arena, robots, r, lidar)\n",
+    "                rot_check, lm, lnm, best_prcntg = detect_false_rotation(objects, arena, robots, r, lidar)\n",
+    "                best_lm, best_lnm, best_shift, best_lidar = lm, lnm, shift[rob], lidar\n",
+    "                \n",
+    "                itr = 0\n",
+    "                while rot_check:\n",
+    "                    itr += 1\n",
+    "                    print(itr, end='\\r')\n",
+    "                    shift[rob] += math.pi / 720\n",
+    "                    lidar, _ = transform_lidar(df, r, angle, idx, shift[rob], ld)\n",
+    "                    rot_check, lm, lnm, prcntg = detect_false_rotation(objects, arena, robots, r, lidar)\n",
+    "                    if prcntg > best_prcntg:\n",
+    "                        best_prcntg, best_lm, best_lnm, best_shift, best_lidar = prcntg, lm, lnm, shift[rob], lidar                        \n",
+    "                    if shift[rob] > math.pi * 2:\n",
+    "                        print(folder, subfolder, rob, 'No correction found!')\n",
+    "                        prcntg, lm, lnm, shift[rob], lidar = best_prcntg, best_lm, best_lnm, best_shift, best_lidar\n",
+    "                        break\n",
     "\n",
     "                # determine if object or kin\n",
     "                l = detect_kin(robots, lidar)\n",
@@ -1802,7 +1819,7 @@
     "                # prints data per robot: ID, position [x,y], orientation corrected by shift, kin detection per LiDAR ray \n",
     "                print(\"robot ID: \" + str(rob))\n",
     "                print(\"robot position: \" + str(r))\n",
-    "                print(\"corrected robot orientation: \" + str(angle + shift[rob]))\n",
+    "                print(\"corrected robot orientation: \" + str(shift[rob]))\n",
     "                print(\"kin detection: \")\n",
     "                print(l[2])\n",
     "                print(\"----\")\n",
